<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green_brisas"
        app:layout_scrollFlags="scroll|snap" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_marginBottom="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

        <ImageView
                android:id="@+id/toolbar_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/img_8"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:layout_marginEnd="6dp"
                android:clickable="true"
                android:focusable="true"/>
        <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        <ImageButton
                android:id="@+id/btn_notifications"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_notifications"
                android:adjustViewBounds="true"
                android:padding="70dp"
                android:contentDescription="@string/notifications" />

        <ImageButton
                android:id="@+id/img_profile_top"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_profile_placeholder"
                android:contentDescription="@string/profile" />

    </LinearLayout>

</com.google.android.material.appbar.MaterialToolbar>
